--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,7 @@
   display: flex;
   justify-content:center; /* Ajusta la distribución del espacio entre los elementos */
 }
+
+.container{
+  margin-top: 40px;
+}
